--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -21,7 +21,7 @@
         android:id="@+id/checkout_button"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginRight="@dimen/lowIsh_Spacing"
+        android:layout_marginEnd="@dimen/lowIsh_Spacing"
         android:layout_marginBottom="@dimen/lowIsh_Spacing"
         android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
