--- a/app/src/main/res/layout/fragment_oishii_welcome.xml
+++ b/app/src/main/res/layout/fragment_oishii_welcome.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="288dp"
-        android:layout_height="194dp"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
         android:layout_marginTop="@dimen/huge_Spacing"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +20,7 @@
         android:id="@+id/login_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/logginn"
         android:textSize="@dimen/header_size"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/image"
