--- a/app/src/main/res/layout/menu_card.xml
+++ b/app/src/main/res/layout/menu_card.xml
@@ -19,18 +19,17 @@
         android:background="@drawable/border">
 
 
-        //Wierd fix but it works for vertical textView
-
+        <!-- Weird fix but it works for vertical textView -->
         <TextView
             android:id="@+id/dishName_textView"
             style="@style/prestigeSideView"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/lowIsh_Spacing"
+            android:layout_marginStart="@dimen/lowIsh_Spacing"
             android:layout_marginTop="160dp"
             android:gravity="end"
             android:rotation="-90"
-            android:text="WOK"
+            tools:text="DishType"
             android:textAlignment="viewEnd"
             app:layout_constraintEnd_toStartOf="@id/line"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +39,7 @@
             android:id="@+id/line"
             android:layout_width="1dp"
             android:layout_height="0dp"
-            android:layout_marginLeft="@dimen/large_Spacing"
+            android:layout_marginStart="@dimen/large_Spacing"
             android:layout_marginTop="@dimen/lowIsh_Spacing"
             android:layout_marginBottom="@dimen/lowIsh_Spacing"
             android:background="@color/oishii_dark_pink"
@@ -53,9 +52,9 @@
             android:id="@+id/menu_LL"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/low_Spacing"
+            android:layout_marginStart="@dimen/low_Spacing"
             android:layout_marginTop="@dimen/lowIsh_Spacing"
-            android:layout_marginRight="@dimen/lowIsh_Spacing"
+            android:layout_marginEnd="@dimen/lowIsh_Spacing"
             android:layout_marginBottom="@dimen/lowIsh_Spacing"
             android:divider="@color/transperant"
             android:orientation="vertical"
