--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,19 @@
         <item name="android:textSize">@dimen/header_size</item>
     </style>
 
+    <style name="CheckoutDish">
+        <item name="android:fontFamily">@font/belgrano</item>
+        <item name="android:textSize">@dimen/checkoutSize</item>
+        <item name="android:textColor">@color/oishii_red</item>
+    </style>
+
+    <style name="dishPlusMinus">
+        <item name="android:textSize">@dimen/dishHeader</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/belgrano</item>
+        <item name="android:layout_marginStart">@dimen/low_Spacing</item>
+    </style>
+
 
 
 
