--- a/app/src/main/res/navigation/oishii_navigation.xml
+++ b/app/src/main/res/navigation/oishii_navigation.xml
@@ -21,10 +21,18 @@
         <action
             android:id="@+id/action_menu_to_checkoutFragment"
             app:destination="@id/checkoutFragment" />
+        <action
+            android:id="@+id/action_menu_to_receiptFragment"
+            app:destination="@id/receiptFragment" />
     </fragment>
     <fragment
         android:id="@+id/checkoutFragment"
         android:name="com.example.oishii.checkout.CheckoutFragment"
         android:label="CheckoutFragment"
         tools:layout="@layout/fragment_checkout"/>
+    <fragment
+        android:id="@+id/receiptFragment"
+        android:name="com.example.oishii.receipt.ReceiptFragment"
+        android:label="ReceiptFragment"
+        tools:layout="@layout/receipt_fragment"/>
 </navigation>
