--- a/app/src/main/res/layout/receipt_fragment.xml
+++ b/app/src/main/res/layout/receipt_fragment.xml
@@ -6,28 +6,16 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/menu_textView"
+        android:id="@+id/reciept_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/medium_Spacing"
-        android:text="     menu \n take away"
+        android:text="@string/kviteringer"
         android:textColor="@color/black"
         android:textSize="@dimen/header_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/checkout_button"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginEnd="@dimen/lowIsh_Spacing"
-        android:layout_marginBottom="@dimen/lowIsh_Spacing"
-        android:elevation="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/oishii_5" />
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -38,18 +26,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/menu_textView"
-        tools:listitem="@layout/oishii_card" />
-
-    <TextView
-        android:id="@+id/receipt_textButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="@dimen/medium_Spacing"
-        android:layout_marginEnd="@dimen/medium_Spacing"
-        android:text="@string/kviteringer"/>
+        app:layout_constraintTop_toBottomOf="@+id/reciept_textView"
+        tools:listitem="@layout/oishii_card"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
